# microbenchmarks

./: CMakeLists.txt  README.md  add_buffers.comp.cpp  add_buffers.cpp  add_buffers.cu  add_buffers_chunked.comp.cpp  add_buffers_chunked.cpp  add_buffers_chunked_generic.comp.cpp  add_buffers_generic.comp.cpp  bench.cpp  bench.h  binary_tree.comp.cpp  binary_tree.cpp  binary_tree.cu  binary_tree.h  fib.comp.cpp  fib.cpp  fib.cu  fib_mangled.comp.cpp  fib_mangled.cu  fib_tailrec.comp.cpp  fn_pointers.comp.cpp  fn_pointers.cpp  fn_pointers.cu  fn_switched.comp.cpp  fn_switched.cu  main.cpp  main_gpu.cpp  test.cu  unions.comp.cpp  unions.cpp  unions.cu  unions.h
